Fixed header overlapping

--- a/frontend/src/shared/components/tasque-header/header.component.sass
+++ b/frontend/src/shared/components/tasque-header/header.component.sass
@@ -18,6 +18,7 @@ header
     background-color: colorscheme(violet-400)
     color: colorscheme(white-100)
     padding: 10px
+    z-index: 1
 
 .search-input
     opacity: 75%
